js/js.translator/testData/incremental/invalidationWithPL/removeFunction/main/test.kt
fun test(): Int {
    try {
        return foo().toInt()
    } catch (e: Error) {
        return 1
    }
}
